# astarion

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml
config/: settings.yaml
docs/: ARCHITECTURAL_DESIGN.md  DOMAIN_KNOWLEDGE.md  FILE_STRUCTURE_REQUIREMENTS.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_PATTERNS.md  PROJECT_OVERVIEW.md  RAG_SYSTEM.md  TESTING_AND_COVERAGE.md  TESTING_GUIDE.md
notebooks/: explore.ipynb
src/astarion/: __init__.py  cli.py
src/astarion/agents/: __init__.py  base.py  ruleset.py  stats.py  validation.py
src/astarion/campaign_maker/crews/character_design/: main.py
src/astarion/campaign_maker/crews/character_design/config/: agents.yaml
src/astarion/campaign_maker/crews/gamemaster/config/: agents.yaml
src/astarion/campaign_maker/crews/quality_assurance/config/: agents.yaml
src/astarion/character_maker/: main.py
src/astarion/character_maker/config/: agents.yaml
src/astarion/core/: __init__.py  config.py  orchestrator.py  validator.py
src/astarion/crews/: __init__.py
src/astarion/crews/character_design/: crew.py
src/astarion/crews/character_ensemble/config/: agents.yaml
src/astarion/crews/editorial_assurance/config/: agents.yaml
src/astarion/crews/knowledge_keeper/config/: agents.yaml
src/astarion/crews/narrative/config/: agents.yaml
src/astarion/crews/optimization/config/: agents.yaml
src/astarion/crews/rules/config/: agents.yaml
src/astarion/crews/worldbuilder/config/: agents.yaml
src/astarion/models/: __init__.py  character.py  rules.py  validation.py
src/astarion/rag/: __init__.py  chunker.py  embedder.py  extractor.py  pipeline.py  processor.py  retriever.py
tests/: conftest.py  test_agents.py  test_basic_workflow.py  test_character.json  test_chunker.py  test_embedder.py  test_extractor.py  test_pipeline_integration.py  test_rag_pipeline.py  test_retriever.py
