[project]
name = "astarion"
version = "0.1.0"
description = "Intelligent LLM-powered assistant for tabletop RPG character creation and rule validation"
authors = [{name = "Astarion Team", email = "team@astarion.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = "~=3.13"

dependencies = [
    # Core dependencies
    "langgraph>=0.2.53",
    "langchain>=0.3.12",
    "langchain-community>=0.3.12", 
    "langchain-openai>=0.2.11",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.6.1",
    # API Framework
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    # CLI
    "click>=8.1.8",
    "rich>=13.9.4",
    "typer>=0.15.1",
    # RAG & Vector Database
    "qdrant-client>=1.12.2",
    "pymupdf>=1.25.1",
    "pdfplumber>=0.11.4",
    "sentence-transformers>=3.3.1",
    "tiktoken>=0.8.0",
    # Rule Engine - will install from git separately
    # "pyknow @ git+https://github.com/buguroo/pyknow.git",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Utilities
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.2.1",
    # Monitoring & Logging
    "loguru>=0.7.3",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "ruff>=0.8.3",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ipython>=8.30.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
]

[project.scripts]
astarion = "astarion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers --cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["astarion"]

[tool.hatch.build.targets.wheel]
packages = ["src/astarion"]

[tool.uv]
package = true 